// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.auth.v2beta1;

import "pbresource/v1/annotations.proto";

message WorkloadIdentity {
  option (hashicorp.consul.resource.v1.spec) = {scope: SCOPE_NAMESPACE};
}
